[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/enemies/Mob.gd" type="Script" id=1]
[ext_resource path="res://art/enemyFlyingAlt_1.png" type="Texture" id=2]
[ext_resource path="res://art/enemyFlyingAlt_2.png" type="Texture" id=3]
[ext_resource path="res://art/enemyWalking_1.png" type="Texture" id=4]
[ext_resource path="res://art/enemyWalking_2.png" type="Texture" id=5]
[ext_resource path="res://art/enemySwimming_1.png" type="Texture" id=6]
[ext_resource path="res://art/enemySwimming_2.png" type="Texture" id=7]
[ext_resource path="res://scenes/hud/HealthBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/map/items/Bomb.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.2706
height = 23.3281

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "swim",
"speed": 4.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 93.0591

[node name="Mob" type="RigidBody2D" groups=["mobs", "save_data"]]
collision_mask = 0
mode = 2
mass = 0.00102041
gravity_scale = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
base_damage = 2.0
type = "mob"
bomb_scene = ExtResource( 10 )
max_dist = 150.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.125, 0.125 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 1 )
animation = "walk"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 8 )]
margin_left = -15.0
margin_top = -15.0
margin_right = 585.0
margin_bottom = 85.0
rect_scale = Vector2( 0.05, 0.05 )

[node name="PathTimer" type="Timer" parent="."]

[node name="ViewArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Mob_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Mob_body_shape_entered"]
[connection signal="killed" from="." to="." method="_on_Mob_killed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="body_entered" from="ViewArea" to="." method="_on_ViewArea_body_entered"]
